<resources>
    <string name="app_name">Open dag app</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_secondpage">secondpage</string>
    <string name="share_this">Share this</string>
    <string name="next_page">next page</string>
    <string name="to">To</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="schoolmail">studievoorlichting@hr.nl</string>
    <string name="subjectactual">Onderwerp </string>
    <string name="questionactual">Vragen</string>
    <string name="second_page">Second page</string>
    <string name="third_page">third page</string>
    <string name="question_form">Question form</string>
    <string name="third_activity">Third activity</string>
    <string name="importr">Import</string>
    <string name="gallery">Gallery</string>
    <string name="slideshow">Slideshow</string>
    <string name="tools">Tools</string>
    <string name="studies">Studies</string>
    <string name="upper_banner">Upper banner</string>
    <string name="informatica">Informatica</string>
    <string name="technische_informatica">Technische Informatica</string>
    <string name="communication_and_multimedia_design">Communication and Multimedia Design</string>
    <string name="creative_media_and_game_design">Creative Media and Game Design</string>
    <string name="communicatie">Communicatie</string>
    <string name="title_activity_informaticainfo">informaticainfo</string>
    <string name="title_activity_technischeinfo">technischeinfo</string>
    <string name="title_activity_communicatie">communicatie</string>
    <string name="title_activity_cmgt">CMGT</string>
    <string name="title_activity_cmd">CMD</string>
    <string name="TI">Technische Informatica</string>
    <string name="I">Informatica</string>
    <string name="CMGT">Creative Media and Game Technologies</string>
    <string name="CMD">Communication and Multimedia Design</string>
    <string name="C">Communicatie</string>
    <string name="questionform">Questionform</string>
    <string name="home">Home</string>
    <string name="contactform">Contactform</string>
    <string name="open_dagen">Open dagen</string>
    <string name="contact">Contact</string>
    <string name="over_hr">Over HR</string>
    <string name="opkomende_open_dagen">Opkomende open dagen</string>
    <string name="c">Communicatie</string>
    <string name="Route">r</string>
    <string name="Locatie">Locatie</string>
    <string name="Communicatie">Communicatie is een Vierjarige bachelor in het Nederlands die start in september Onze opleiding Communicatie leidt jou in vier jaar op tot wat we een smart connector noemen. Met inzet van bijvoorbeeld social tools, storytelling, big data en co-creatie. Je ontwikkelt creatieve concepten zoals mediacampagnes, events en verhalenplatforms. Op basis van goed onderzoek, theorie en strategie en natuurlijk jouw eigen verrassende ideeën. De opleiding Communicatie leert je om als smart connector mensen te raken, te verbinden en te bewegen.</string>
    <string name="googlemaps">Klik voor locatie in google maps</string>
    <string name="TIbeschrijving">Als technisch informaticus werk je aan moderne ICT-systemen waarbij hard- en software geïntegreerd zijn. Je ontwikkelt kennis van programmeren en hardware. Als technisch informaticus draag je bij aan het ontwikkelen, beveiligen en in de lucht houden van deze systemen. Je bent een all-rounder op alle disciplines. Denk daarbij aan Machine Learning, Augmented Reality, Automated Systems en uiteraard de met IoT (Internet of Things) nauw verbonden met Embedded Systems.</string>
    <string name="Iinfo">Informatica is een vierjarige bachelor in het nederlands, de studie start in september. We leiden je op op tot software engineer. Je gaat aan de slag met het ontwikkelen van software voor diverse toepassingen. Je bent in staat complexe ICT-systemen te analyseren, ontwerpen en implementeren. Software is overal om ons heen te vinden. Jij bent de specialist in het maken van grote en complexe software informatiesystemen die snel, efficiënt en veilig werken. Zo kun je denken aan het ontwikkelen van een functionele app, maar ook aan het analyseren van grote hoeveelheden data van social media.</string>
    <string name="CMDinfo">Je ontwerpt betekenisvolle interactieve producten en diensten voor de mens: van website, app, interactieve installatie, tot volledige experience. Je leert werken vanuit de belangen en beleving van gebruikers en opdrachtgevers. Een actieve houding is voorwaarde voor het ontwerpproces bij Communication and Multimedia Design. Evenals een gezonde dosis nieuwsgierigheid, lef en zelfstandigheid om werk van hoge kwaliteit op te leveren.</string>
    <string name="cmgt">Creatieve technologen bedenken en ontwikkelen innovatieve digitale producten, waarbij de gebruiker centraal staat. Als CMGT\'er ben je een developer van interactieve digitale producten: je ontwikkelt web- en mobiele applicaties en je kent de basis van het ontwikkelen van games. Na deze studie gaan CMGT\'ers als programmeur aan de slag bij internetbureaus of andere bureaus in de creatieve sector (reclame, marketing, ontwerp, innovatie). Web Developer en Mobile Developer zijn de beroepen die veel afgestudeerden op dit moment uitoefenen na afloop van de studie.</string>
    <string name="help">help</string>
    <string name="support">help</string>
    <string name="informatie">Klik op de kaart om de locatie van de school te openen in google maps. We zijn op werkdagen te vinden op Wijnhaven 107, 3011 WN Rotterdam tussen 07:30 en 18:00. Ook kan er telefoonisch contact opgenomen worden via het volgende nummer; 010 794 4000.</string>
    <string name="title_activity_inschrijven">Inschrijven</string>
    <string name="ins">Inschrijven</string>
    <string name="uitleg">Klik op de een van de I\'s hierboven voor het rooster van de open dag. Voor de uitleg over de andere knoppen klik op Help op de homescreen.</string>
    <string name="Overhr">Bij Hogeschool Rotterdam studeren ruim 39.000 studenten en er zijn zo ongeveer 4.000 medewerkers werkzaam. Het opleidingsassortiment bestaat uit een breed aanbod in bijna alle onderwijssectoren.Het onderwijs is nauw verweven met de grootstedelijke ontwikkelingen in de regio Rotterdam.  In een voortdurende wisselwerking en samenwerking delen wij kennis, kunde en ervaring met het bedrijfsleven, instellingen en overheid.</string>
    <string name="Locatie_hr"> Locatie:Wijnhaven 107 3011 WN Rotterdam.</string>
    <string name="Tekstje_hr">Klik hieronder om de locatie van Hogeschool Rotterdam op google maps te zien.</string>
    <string name="vragenformulier">Vragenformulier</string>

</resources>
