<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:theme="@style/AppTheme">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vragenformulier"
        android:layout_gravity="center_horizontal"
        android:textSize="30sp"
        android:textColor="#000"
        android:typeface="monospace" />
    <EditText
        android:id="@+id/txtTo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginBottom="0sp"
        android:text="@string/schoolmail"/>

    <EditText
        android:id="@+id/txtSubject"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginBottom="0sp"
        android:hint="@string/subjectactual" />

    <EditText
        android:id="@+id/txtMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:hint="@string/questionactual" />

        <Button
            android:id="@+id/btnOK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="20dp"
            android:onClick="composeEmail"
            android:textColor="#fff"
            android:background="@drawable/buttonshape"
            android:scaleType="fitCenter"
            android:text="@string/send" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="10dp">

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="261dp"
            android:onClick="GoToMaps"
            android:src="@drawable/maps" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#9aaa"
        android:padding="10dp"
        android:text="@string/informatie"/>

    </LinearLayout>
</LinearLayout>
</ScrollView>